bpo-34419: selectmodule.c does not compile on HP-UX due to bpo-31938 (GH-8796)

Fix compile errors reported by HP aCC by fixing bugs introduced in 6dc57e2a20c
which do not cause trouble on clang or GCC.

Patch by Michael Osipov.