Modules/selectmodule.c
@@ -846,8 +846,6 @@ static PyObject *
 select_devpoll_modify_impl(devpollObject *self, int fd,
                            unsigned short eventmask)
 /*[clinic end generated code: output=bc2e6d23aaff98b4 input=48a820fc5967165d]*/
-static PyObject *
-devpoll_modify(devpollObject *self, PyObject *args)
 {
     return internal_devpoll_register(self, fd, eventmask, 1);
 }
@@ -895,7 +893,7 @@ select_devpoll_poll_impl(devpollObject *self, PyObject *timeout_obj)
 /*[clinic end generated code: output=2654e5457cca0b3c input=fd0db698d84f0333]*/
 {
     struct dvpoll dvp;
-    PyObject *result_list = NULL, *timeout_obj = NULL;
+    PyObject *result_list = NULL;
     int poll_result, i;
     PyObject *value, *num1, *num2;
     _PyTime_t timeout, ms, deadline = 0;
